# samogwas

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  compile
apps/: CMakeLists.txt
apps/clustering/: CMakeLists.txt  application_options.hpp  main.cpp  main.hpp
apps/clusteringParameters/: CMakeLists.txt  algo_properties.hpp  clusteringParameters_main.cpp  clusteringParameters_main.hpp
apps/fltm/: CMakeLists.txt  algo_properties.hpp  application_options.hpp  dataload.hpp  fltm_main.cpp  fltm_main.hpp  fltm_main_jules.cpp
apps/fltmAndGwas/: CMakeLists.txt  algo_properties.hpp  application_options.hpp  fltm_gwas_main.cpp  fltm_gwas_main.hpp
apps/gwas/: CMakeLists.txt  app_options.hpp  gwas_main.cpp  gwas_main.hpp
apps/inference/: CMakeLists.txt  app_options.hpp  gwas_main.cpp  inf_main.cpp  main.cpp  main.hpp  test.cpp
apps/measures/: CMakeLists.txt  app_options.hpp  main.cpp
apps/utils/: clustering_config.hpp  dataload.hpp  tools.hpp
core/: CMakeLists.txt
core/include/: global.hpp
core/include/clustering/: cast.hpp  clustering.hpp  dbscan.hpp
core/include/clustering/louvain/: #louv.hpp#  .#louv.hpp  community.hpp  graph.hpp  link.hpp  louv.hpp
core/include/clustering/measures/: expected_mutual_info.hpp  normalized_joint_entropy.hpp
core/include/distance/: diss.hpp  distance.hpp  distance_common.hpp  simi.hpp
core/include/em/: core_em.hpp  multi_em.hpp
core/include/fltm/: card_func.hpp  fltm.cpp  fltm.hpp  latent_var_criteria.hpp
core/include/graph/: graph.hpp  graph_io.hpp  graph_mut_info.hpp
core/include/inference/: inference.hpp  inference_engine.hpp
core/include/statistics/: association_test.hpp  chisq.hpp  entropy.hpp  fisher.hpp  g2.hpp  helper.hpp  mutual_information.hpp  permutation_test.hpp  test_statistics.hpp
core/include/utils/: csv_parser.hpp  custom_option_desc.hpp  logs_utils.hpp  matrix_utils.hpp  random_tools.hpp  timer_utils.hpp  type_utils.hpp
core/src/clustering/: clustering.cpp
core/src/clustering/louvain/: community.cpp  graph.cpp  link.cpp  louv.cpp
core/src/distance/: simi.cpp
core/src/em/: core_em.cpp  multi_em.cpp
core/src/fltm/: fltm.cpp
core/src/graph/: graph.cpp  graph_io.cpp
core/src/inference/: inference.cpp  inference_engine.cpp
core/src/utils/: timer_utils.cpp
dependencies/probt_spl_2_3_99/doc/: README.txt  changes.txt
dependencies/probt_spl_2_3_99/doc/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+1091 more)
dependencies/probt_spl_2_3_99/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  files_0.js  (+52 more)
dependencies/probt_spl_2_3_99/examples/: probt.mak
dependencies/probt_spl_2_3_99/examples/pl/: BayesianNetwork.cpp  Makefile
dependencies/probt_spl_2_3_99/examples/policy_networks/: Makefile  infected_milk.cpp  oil_wildcatter.cpp
dependencies/probt_spl_2_3_99/examples/spl/: Makefile  my_data.data  my_data2.data  serialiseReader.cpp  serialiseWriter.cpp
dependencies/probt_spl_2_3_99/examples/structure_learning/: Makefile  asia.cpp  common.cpp  common.h  structure_learning.cpp
dependencies/probt_spl_2_3_99/include/: pl.h  plAnonymousDistribution.h  plArray.h  plBackwardCompatibilityV1.h  plBackwardCompatibilityV2.h  plBayesLearn1dNormalWithKnownMean.h  plBayesLearn1dNormalWithKnownStandardDeviation.h  plBayesLearnBinomial.h  plBayesLearnExponential.h  plBayesLearnGamma.h  plBayesLearnLogNormalWithKnownShape.h  plBayesLearnNdNormalWithKnownVariance.h  plBayesLearnPoisson.h  plBayesLearnProbTable.h  plBayesianFilter.h  plBayesianNetwork.h  plBeta.h  plBinomial.h  plCSVDataDescriptor.h  plCSVFileDataDescriptor.h  plCSVLineParser.h  plCndAnonymousDistribution.h  plCndBeta.h  plCndBinomial.h  plCndDeterministic.h  plCndDistribution.h  plCndExponential.h  plCndGamma.h  plCndLearnObject.h  plCndLogNormal.h  plCndNormal.h  plCndPoisson.h  plCndUniform.h  plCndUnknown.h  plCndVonMises.h  plCndWeibull.h  plComputableObject.h  plConcurrentHmmSet.h  plConfig.h  plContinuousIntervalType.h  (+109 more)
dependencies/probt_spl_2_3_99/lib/: BOOST_LICENSE.txt  PROBT_LICENSE.txt  TCC_LICENSE.txt  pypl.py
example/inputs/: clustering.cfg  phenotype.csv  thresholds.txt
example/inputs/configs/: chr16_dbscan_exp_max.cfg
example/inputs/data/: dat_300.csv
example/inputs/labels/: lab_300.csv  lab_3000.csv
example/outputs/2015_06_12_11_38_18/: fltm_DBSCAN_2_0.700_bayes.dist  fltm_DBSCAN_2_0.700_bayes.vertex  fltm_DBSCAN_2_0.700_imputed.lab  log.txt
tests/: CMakeLists.txt  test_runner.cpp
tests/clustering/: CMakeLists.txt  test_cast.cpp  test_clustering.cpp
tests/data/clustering/: graph.txt
tests/data/em/: dat_5.csv  dat_50.csv  lab_5.csv
tests/data/fltm/: clustering.cfg  lab_300.csv  lab_50.csv
tests/data/graph/: obs_latent_no_relation.csv  obs_latent_no_relation_X.csv  obs_latent_no_relation_Y.csv  obs_obs_dep.csv  obs_obs_ind.csv
tests/data/graph/io/: saved_graph_1_cnd_data.csv  saved_graph_1_data.csv  saved_graph_1_dist.csv  saved_graph_1_label.csv  saved_graph_1_vertex.csv  saved_graph_1a_dist.csv  saved_graph_1a_vertex.csv
tests/em/: test_em.cpp
tests/fltm/: application_options.hpp  dataload.hpp  fltm_main.hpp  test_fltm.cpp
tests/graph/: test_graph.cpp  test_graph.hpp
tests/measures/: test_measures.cpp
tests/statistics/: CMakeLists.txt  test_statistics.cpp
tests/test_tools/: data_generation.hpp  data_load.hpp  dataload.hpp
